# palfrey

./: .gitignore  BENCHMARK-FIX.md  CHANGELOG.md  CITATION.cff  LICENSE  PARITY_CHECKLIST.md  README.md  Taskfile.yaml  mkdocs.yaml  palfrey_rust.pyi  par.md  pyproject.toml  qa_large_stream_app.py  run-benchmark.sh
.github/ISSUE_TEMPLATE/: 1-issue.md  config.yml
.github/workflows/: ci.yml  codspeed.yml  docs.yml  publish.yml  test-suite.yml
.sisyphus/: boulder.json
.sisyphus/evidence/: task-1-baseline.md  task-10a-single-chunk.md  task-11-socket-tuning.md  task-11-summary.md  task-12-status-lines.md  task-12-uncommon-status.md  task-13-backpressure.md  task-13-no-regression.md  task-14-benchmark.md  task-14-parity.md  task-14-rust-import.md  task-15-benchmark-report.md  task-17-benchmark-3phase.md  task-17-benchmark-json.md  task-18-docstring-coverage.md  task-19-docstring-coverage.md  task-19-lint.md  task-2-lint-clean.md  task-20-comments.md  task-21-cli-mapping.md  task-21-docs-build.md  task-3b-server-coverage.md  task-4-rust-audit.md  task-5-lint.md  task-5-module-docstrings.md  task-6-docstring-coverage.md  task-6-lint.md  task-7-cprofile.prof  task-7-profile-report.md  task-8-keepalive.md  task-8-streaming-large-body.md  task-8-tests.md  task-9-code-inspection.md  task-9-header-bytes.md
.sisyphus/plans/: palfrey-improvements.md
benchmarks/: __init__.py  apps.py  run.py
docs/: missing-translation.md
docs/en/: mkdocs.yml
docs_src/benchmarks/: run_benchmarks.py
docs_src/cli/: basic_commands.py
docs_src/concepts/: asgi_minimal.py  asgi_scope_inspector.py  http_read_body.py  http_streaming.py  lifespan_state.py  proxy_headers_middleware.py  websocket_auth_gate.py  websocket_chat_room.py  websocket_echo.py
docs_src/config/: example.py
docs_src/custom-protocols/: accel_example.py  middleware_example.py
docs_src/deployment/: example.py
docs_src/getting_started/: factory_app.py  hello_world.py  json_api.py
docs_src/guides/: https_run.py  nginx_reverse_proxy_app.py  troubleshooting_healthcheck.py
docs_src/kubernetes/: configmap.yaml  deployment.yaml  health-check.py  hpa.yaml  service.yaml
docs_src/lifespan/: lifespan_app.py
docs_src/logging/: logging_json.py
docs_src/middleware/: proxy_headers.py
docs_src/migration/: palfrey_after.sh  uvicorn_before.sh
docs_src/operations/: benchmark_plan.py  docker_healthcheck.py  graceful_shutdown.py  gunicorn_conf.py  reload_dev.py  systemd_app.py  workers_cpu_bound.py
docs_src/protocols/: websocket_echo.py
docs_src/quickstart/: example.py
docs_src/reference/: custom_headers.py  env_runtime.py  logging_json.py  programmatic_config.py  programmatic_run.py
docs_src/reload/: reload_cli.py
docs_src/ssl/: ssl_cli.py
docs_src/workers/: workers_cli.py
palfrey/: __init__.py  __main__.py  acceleration.py  adapters.py  cli.py  config.py  env.py  http_date.py  importer.py  lifespan.py  logging_config.py  main.py  runtime.py  server.py  types.py  workers.py
palfrey/loops/: __init__.py  asyncio.py  auto.py  none.py  uvloop.py
palfrey/middleware/: __init__.py  message_logger.py  proxy_headers.py
palfrey/protocols/: __init__.py  http.py  http2.py  http3.py  utils.py  websocket.py
palfrey/supervisors/: reload.py  workers.py
rust/palfrey_rust/: Cargo.toml
scripts/: build-rust-extension  clean  docs.py  docs_pipeline.py  install  publish
tests/: __init__.py  helpers.py
tests/adapters/: test_adapters.py  test_adapters_compat_extra.py  test_adapters_parity_extra.py
tests/benchmarks/: test_benchmark_harness.py  test_codspeed.py  test_run_script.py
tests/cli/: test_cli_compat.py  test_cli_parity.py  test_cli_runtime_mode_compat.py  test_cli_runtime_mode_parity.py  test_cli_surface.py
tests/config/: custom_protocol_classes.py  test_config.py  test_config_bind_socket_compat.py  test_config_bind_socket_parity.py  test_config_compat.py  test_config_load_compat.py  test_config_loop_factory_compat.py  test_config_parity.py  test_config_runtime_modes_compat.py  test_config_runtime_modes_parity.py  test_config_uvicorn_compat_extra.py  test_config_uvicorn_parity_extra.py
tests/fixtures/: __init__.py  apps.py
tests/importer/: circular_import_a.py  circular_import_b.py  raise_import_error.py  test_importer.py  test_importer_parity.py
tests/integration/: test_http_headers_integration.py  test_http_integration.py  test_uvicorn_differential_compat.py  test_uvicorn_differential_parity.py  test_websocket_integration.py
tests/loops/: custom_loop_class.py  custom_loop_factory.py  test_custom_loop_compat.py  test_loops.py
tests/middleware/: test_message_logger.py  test_message_logger_compat_extra.py  test_message_logger_lifecycle_compat.py  test_message_logger_lifecycle_parity.py  test_message_logger_parity_extra.py  test_proxy_headers.py  test_proxy_headers_compat_extra.py  test_proxy_headers_parity_extra.py  (+1 more)
(+127 files in other folders)
