[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "palfrey"
description = "A clean-room ASGI server with Uvicorn-compatible CLI and behavior mapping."
readme = "README.md"
requires-python = ">=3.10"
dynamic = ["version"]
license = { text = "MIT" }
authors = [
  { name = "Tiago Silva", email = "tarsil@tarsild.io" },
]
classifiers = [
  "Development Status :: 4 - Beta",
  "Environment :: Web Environment",
  "Framework :: AsyncIO",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: MIT License",
  "Operating System :: OS Independent",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Programming Language :: Python :: 3.14",
  "Topic :: Internet :: WWW/HTTP :: HTTP Servers",
  "Typing :: Typed",
]
keywords = ["asgi", "server", "click", "websocket"]
dependencies = [
  "click>=8.1.7,<9.0.0",
  "h11>=0.8",
]

[project.optional-dependencies]
standard = [
    "colorama>=0.4; sys_platform == 'win32'",
    "httptools>=0.6.3",
    "python-dotenv>=0.13",
    "PyYAML>=5.1",
    "uvloop>=0.15.1; sys_platform != 'win32' and (sys_platform != 'cygwin' and platform_python_implementation != 'PyPy')",
    "watchfiles>=0.20",
    "websockets>=10.4",
]

dev = [
  "ruff>=0.11.0,<1.0.0",
  "ty>=0.0.1a16",
  "maturin>=1.9.0,<2.0.0",
]
testing = [
  "pytest>=8.3.0,<9.0.0",
  "pytest-cov>=5.0.0,<7.0.0",
]
benchmark = [
    "uvicorn[standard]>=0.34.0,<1.0.0",
]

docs = [
    "sayer>=0.7.4",
    "griffe-typingdoc>=0.2.2,<1.0",
    "mkdocs>=1.1.2,<2.0.0",
    "mkdocs-material>=9.4.4",
    "mdx-include>=1.4.2",
    "mkdocs-macros-plugin>=0.4.0",
    "mkdocs-meta-descriptions-plugin>=2.3.0",
    "mkdocstrings[python]>=0.23.0",
    "pyyaml>=6.0,<7.0.0",
    "typing_extensions>=3.10.0",
]

[project.urls]
Homepage = "https://github.com/dymmond/palfrey"
Documentation = "https://palfrey.dymmond.com"
Source = "https://github.com/dymmond/palfrey"
Changelog = "https://github.com/dymmond/palfrey/blob/main/CHANGELOG.md"

[project.scripts]
palfrey = "palfrey.cli:main"
palfrey-benchmark = "benchmarks.run:main"

[tool.hatch.version]
path = "palfrey/__init__.py"

[tool.hatch.build.targets.wheel]
packages = ["palfrey", "benchmarks"]

[tool.hatch.build.targets.sdist]
include = [
  "/palfrey",
  "/benchmarks",
  "/tests",
  "/docs",
  "/docs_src",
  "/rust",
  "/scripts",
  "/mkdocs.yml",
  "/README.md",
  "/CHANGELOG.md",
]

[tool.hatch.envs.default]
features = ["dev", "testing", "docs", "benchmark", "standard"]

[tool.hatch.envs.default.scripts]
lint = "ruff check palfrey tests benchmarks"
format = "ruff format palfrey tests benchmarks"
format-check = "ruff format --check palfrey tests benchmarks"
check-types = "ty check palfrey"
test-cov = "pytest --cov=palfrey --cov-report=term-missing --cov-report=xml --cov-fail-under=85"
docs-build = "cd docs/en && mkdocs build --strict"
benchmark = "python -m benchmarks.run"
rust-build = "scripts/build-rust-extension"
clean_pyc = "find . -type f -name \"*.pyc\" -delete"
clean_pyi = "find . -type f -name \"*.pyi\" -delete"
clean_pycache = "find . -type d -name \"*__pycache__*\" -delete"

[tool.hatch.envs.docs]
features = ["docs"]

[tool.hatch.envs.docs.scripts]
update_languages = "scripts/docs.py update-languages"
build = "hatch run docs:update_languages; scripts/docs.py build-all"
build_lang = "hatch run docs:update_languages; scripts/docs.py build --lang {args}"
serve = "hatch run docs:update_languages; scripts/docs.py live"
dev = "hatch run docs:update_languages; scripts/docs.py serve"
serve_lang = "hatch run docs:update_languages; scripts/docs.py live --lang {args}"
new_lang = "hatch run docs:update_languages; scripts/docs.py new-lang --lang {args}"

[tool.hatch.envs.test]
features = ["testing"]

[tool.hatch.envs.test.scripts]
test = "pytest --cov=palfrey --cov-report=term-missing --cov-report=xml --cov-fail-under=85"
test_man = "pytest -- {args} -s -vv"

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "W", "F", "I", "B", "UP", "N"]
ignore = ["E501"]

[tool.ruff.lint.isort]
combine-as-imports = true

#[tool.ty]
#src = ["palfrey", "tests", "benchmarks"]

[tool.pytest.ini_options]
addopts = [
  "--strict-config",
  "--strict-markers",
  "--cov=palfrey",
  "--cov-report=term-missing",
  "--cov-report=xml",
  "--cov-fail-under=85",
]
xfail_strict = true
junit_family = "xunit2"
testpaths = ["tests"]

[tool.coverage.run]
source = ["palfrey"]
branch = true
parallel = true

[tool.coverage.report]
show_missing = true
skip_covered = false
